--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,16 @@
 /.pc/
 /.deps/
 Makefile
-config.h
-config.log
-config.status
 *.o
+aclocal.m4
+autom4te.cache
+compile
+config.*
+configure
+depcomp
+INSTALL
+install-sh
+Makefile.in
+missing
 sshpass
 stamp-h1
